# home-system

./: .gitignore  .gitmodules  CMakeLists.txt  GPATH  GRTAGS  GTAGS  LICENSE  README.md  apps.props  build.sh  home-system.sln  includes.props  run_home_system.sh  toolchain-armel.cmake  toolchain-armhf.cmake  ws_apps.props
cloud-server/: .cproject  .project  client.cpp  client.h  client_request_handler.cpp  client_request_handler.h  client_t.h  clients.cpp  clients.h  cloud-server.cpp  cloud-server.vcxproj  cloud-server.vcxproj.filters  handler.cpp  handler.h  handlers.cpp  handlers.h  request_handler_factories.cpp  request_handler_factories.h  system.cpp  system.h  system_handler.cpp  system_handler.h  system_request_handler.cpp  system_request_handler.h  system_t.h  systems.cpp  systems.h
cloud-server/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
common/: common.vcxproj
common/nbproject/: Makefile-Debug.mk  Makefile-Debug_laptop.mk  Makefile-Debug_praca.mk  Makefile-Debug_tv.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_laptop.bash  Package-Debug_praca.bash  Package-Debug_tv.bash  Package-Release.bash  configurations.xml  project.xml
common/src/: app.cpp  mcs.cpp
control-server/: .cproject  .project  Makefile  client.cpp  client.h  cloud_client.cpp  control-server.conf  control-server.vcproj  control-server.vcxproj  control-server.vcxproj.filters
control-server/nbproject/: Makefile-Debug.mk  Makefile-Debug_laptop.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_laptop.bash  Package-Release.bash  configurations.xml  project.xml
control-server/src/: binary_connection.cpp  binary_connection.h  client.cpp  client.h  client_binary_session.cpp  client_binary_session.h  client_service.cpp  client_service.h  clients.cpp  clients.h  cloud_client.cpp  cloud_client.h  cloud_ws.cpp  cloud_ws.h  control-server.cpp  control-service.cpp  control-service.h  drawchart.cpp  drawchart.h  file_request_handler.cpp  file_request_handler.h  http.cpp  http.h  json_converter.cpp  json_converter.h  msg_type_t.h  pch.h  receiving_session.cpp  receiving_session.h  ws_com_handler.cpp  ws_com_handler.h  ws_request_handler.cpp  ws_request_handler.h
dhw-recirculation/: dhw-recirculation.vcxproj  dhw-recirculation.vcxproj.filters
dhw-recirculation/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
dhw-recirculation/src/: dhw-recirculation.cpp  dhwrec-service.cpp  dhwrec-service.h
dvb-source/: Makefile
dvb-source/nbproject/: Makefile-Debug.mk  Makefile-Debug_laptop.mk  Makefile-Debug_praca.mk  Makefile-Debug_tv.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_laptop.bash  Package-Debug_praca.bash  Package-Debug_tv.bash  Package-Release.bash  configurations.xml  project.xml
dvb-source/src/: channel.cpp  channel.h  channel_t.h  channels.cpp  channels.h  demux.cpp  demux.h  dvb-service.cpp  dvb-service.h  dvb.cpp  dvb.h  file-reader.cpp  file-reader.h  frontend.cpp  frontend.h  frontend_extended.h  main.cpp  param_convert.cpp  param_convert.h  session.cpp  session.h  session_callback_t.h  session_t.h  transponder.cpp  transponder.h  transponder_configuration_exception.h  transponder_dvbs.cpp  transponders.cpp  (+6 more)
input-output/: .cproject  .project  CMakeLists.txt  input-output.vcproj  input-output.vcxproj  input-output.vcxproj.filters  uuids
input-output/libio/include/io/: io_device.h  io_service.h
input-output/libio/src/: io_device.cpp
input-output/nbproject/: Makefile-Debug.mk  Makefile-Debug_laptop.mk  Makefile-Debug_praca.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug_laptop.bash  Package-Debug_praca.bash  Package-Release.bash  configurations.xml  project.xml
input-output/src/: device.cpp  device.h  input-output.cpp  io-service.cpp  io-service.h  owdevice.cpp  owdevice.h  ownetwork.cpp  ownetwork.h  owtemp.cpp  owtemp.h  utils.cpp  utils.h
input-output/src/1wire/common/: owerr.c  ownet.h
io-1wire/: CMakeLists.txt
io-1wire-sysfs/: CMakeLists.txt
io-1wire/src/: io-1wire.cpp  owdevice.cpp  owdevice.h  ownetwork.cpp  ownetwork.h  owtemp.cpp  owtemp.h  utils.h
io-1wire/src/1wire/lib/other/libUSB/: libusbses.c
io-control/: .project  CMakeLists.txt  app.py  configuration.py  discovery.py  display.py  events.py  example_rule.lua  input.py  inputs.py  io-control-service.py  io-control.conf  io-control.cpp  io-control.komodoproject  io-control.lua  io-control.py  io-control.vcxproj  io-control.vcxproj.filters  io_service.py  iocontrol.py  iocontrolservice.py  iomap.py  ioservice.py  ioservices.py  mainservice.py  mytimer.py  output.py  outputs.py  rule.py  rules.py  service.py  services.py  setting.py  subscribers.py  test.py  test_io.py  wtimer.py  yagent.py  yami.py
io-control/src/: interval_schedule.h  io-control.cpp  io.cpp  io.h  io_base.h  io_in_float.cpp  io_in_float.h  io_remote.cpp  io_remote.h  io_temp.cpp  io_temp.h  ios.cpp  ios.h  ios_lua_callbacks.cpp  ios_lua_callbacks.h  rule.cpp  rule.h  rules.cpp  rules.h  schedule.cpp  schedule.h  service.cpp  service.h  services.cpp  services.h  stdafx.cpp  stdafx.h  weekly_schedule.cpp  weekly_schedule.h
io-control/test/: iocontrol_test.cpp
io-gpio/: CMakeLists.txt
io-relay-board/: .cproject  .project  CMakeLists.txt  io-relay-board.vcxproj  io-relay-board.vcxproj.filters
libs/io/: CMakeLists.txt
libs/io/include/io/: device.h  device_float.h  device_impl.h  device_int.h  device_types.h  io_device.h  service.h
libs/io/src/: device.cpp  device_float.cpp  device_impl.cpp  device_int.cpp  io_device.cpp  io_service.cpp  service.cpp
libs/io/test/: io_test.cpp
test/: CMakeLists.txt  system_test.cpp  test.cpp  test.vcxproj
tv/: tv.vcxproj  tv.vcxproj.filters
webpage/: .project
(+230 files in other folders)
